--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -5,6 +5,7 @@
   "author": "Sagar <sagar.devices@gmail.com>",
   "private": true,
   "dependencies": {
+    "@aparajita/capacitor-secure-storage": "^4.0.0",
     "@capacitor/android": "^5.2.0",
     "@capacitor/app": "^5.0.0",
     "@capacitor/cli": "^5.0.0",
