--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@capacitor-community/barcode-scanner": "^4.0.1",
     "@hiveio/dhive": "^1.2.7",
     "@quasar/extras": "^1.16.4",
+    "@weslink/vue-pincode": "^0.2.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
+    "vue-pincode-input": "^0.4.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
