--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@quasar/extras": "^1.16.4",
     "@weslink/vue-pincode": "^0.2.1",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "uuid": "^9.0.0",
