--- a/src-capacitor/capacitor.config.json
+++ b/src-capacitor/capacitor.config.json
@@ -5,7 +5,6 @@
   "npmClient": "npm",
   "webDir": "www",
   "server": {
-    "androidScheme": "https",
-    "url": "http://192.168.1.6:9500"
+    "androidScheme": "https"
   }
 }
