--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@aparajita/capacitor-secure-storage": "^4.0.0",
     "@capacitor-community/barcode-scanner": "^4.0.1",
+    "@capacitor/clipboard": "^5.0.6",
     "@hiveio/dhive": "^1.2.7",
     "@hiveio/hive-js": "^2.0.6",
+    "@quasar/cli": "^2.2.3",
     "@quasar/extras": "^1.16.4",
     "@weslink/vue-pincode": "^0.2.1",
     "crypto-js": "^4.1.1",
