--- a/src-capacitor/android/capacitor.settings.gradle
+++ b/src-capacitor/android/capacitor.settings.gradle
@@ -10,3 +10,6 @@ project(':capacitor-community-barcode-scanner').projectDir = new File('../node_m
 
 include ':capacitor-app'
 project(':capacitor-app').projectDir = new File('../node_modules/@capacitor/app/android')
+
+include ':capacitor-clipboard'
+project(':capacitor-clipboard').projectDir = new File('../node_modules/@capacitor/clipboard/android')
