--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -10,6 +10,7 @@
     "@capacitor/android": "^5.2.0",
     "@capacitor/app": "^5.0.0",
     "@capacitor/cli": "^5.0.0",
+    "@capacitor/clipboard": "^5.0.6",
     "@capacitor/core": "^5.0.0",
     "@capacitor/ios": "^5.2.0"
   }
