--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@quasar/cli": "^2.2.3",
     "@quasar/extras": "^1.16.4",
     "@weslink/vue-pincode": "^0.2.1",
+    "assert": "^2.0.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "pinia": "^2.0.11",
