--- a/src-capacitor/android/app/src/main/AndroidManifest.xml
+++ b/src-capacitor/android/app/src/main/AndroidManifest.xml
@@ -3,26 +3,30 @@
   xmlns:tools="http://schemas.android.com/tools">
 
   <application
-    android:usesCleartextTraffic="true"
     android:allowBackup="true"
+    android:hardwareAccelerated="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:hardwareAccelerated="true"
-    android:theme="@style/AppTheme">
+    android:theme="@style/AppTheme"
+    android:usesCleartextTraffic="true">
 
     <activity
-      android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"
       android:name=".MainActivity"
+      android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"
+      android:exported="true"
       android:label="@string/title_activity_main"
-      android:theme="@style/AppTheme.NoActionBarLaunch"
       android:launchMode="singleTask"
-      android:exported="true">
+      android:theme="@style/AppTheme.NoActionBarLaunch">
 
       <intent-filter>
+        <data android:scheme="has" />
         <action android:name="android.intent.action.MAIN" />
+        <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.LAUNCHER" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
       </intent-filter>
 
     </activity>
@@ -42,5 +46,6 @@
 
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.CAMERA" />
+
   <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
 </manifest>
