--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "https": "^1.0.0",
+    "moment": "^2.29.4",
+    "momentjs": "^2.0.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "uuid": "^9.0.0",
