About Us page under development.

--- a/src-capacitor/android/app/capacitor.build.gradle
+++ b/src-capacitor/android/app/capacitor.build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation project(':aparajita-capacitor-secure-storage')
     implementation project(':capacitor-community-barcode-scanner')
     implementation project(':capacitor-app')
+    implementation project(':capacitor-app-launcher')
     implementation project(':capacitor-clipboard')
 
 }
