--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@aparajita/capacitor-secure-storage": "^4.0.0",
     "@capacitor-community/barcode-scanner": "^4.0.1",
+    "@capacitor/app-launcher": "^5.0.6",
     "@capacitor/clipboard": "^5.0.6",
     "@hiveio/dhive": "^1.2.7",
     "@hiveio/hive-js": "^2.0.6",
