--- a/src-capacitor/android/capacitor.settings.gradle
+++ b/src-capacitor/android/capacitor.settings.gradle
@@ -11,5 +11,8 @@ project(':capacitor-community-barcode-scanner').projectDir = new File('../node_m
 include ':capacitor-app'
 project(':capacitor-app').projectDir = new File('../node_modules/@capacitor/app/android')
 
+include ':capacitor-app-launcher'
+project(':capacitor-app-launcher').projectDir = new File('../node_modules/@capacitor/app-launcher/android')
+
 include ':capacitor-clipboard'
 project(':capacitor-clipboard').projectDir = new File('../node_modules/@capacitor/clipboard/android')
