--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -9,6 +9,7 @@
     "@capacitor-community/barcode-scanner": "^4.0.1",
     "@capacitor/android": "^5.2.0",
     "@capacitor/app": "^5.0.0",
+    "@capacitor/app-launcher": "^5.0.6",
     "@capacitor/cli": "^5.0.0",
     "@capacitor/clipboard": "^5.0.6",
     "@capacitor/core": "^5.3.0",
