New biometrics integration.

--- a/src-capacitor/android/capacitor.settings.gradle
+++ b/src-capacitor/android/capacitor.settings.gradle
@@ -16,3 +16,6 @@ project(':capacitor-app-launcher').projectDir = new File('../node_modules/@capac
 
 include ':capacitor-clipboard'
 project(':capacitor-clipboard').projectDir = new File('../node_modules/@capacitor/clipboard/android')
+
+include ':capacitor-native-biometric'
+project(':capacitor-native-biometric').projectDir = new File('../node_modules/capacitor-native-biometric/android')
