--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@quasar/extras": "^1.16.4",
     "@weslink/vue-pincode": "^0.2.1",
     "assert": "^2.0.0",
+    "capacitor-native-biometric": "^4.2.2",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "https": "^1.0.0",
