--- a/src-capacitor/android/app/capacitor.build.gradle
+++ b/src-capacitor/android/app/capacitor.build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation project(':capacitor-app')
     implementation project(':capacitor-app-launcher')
     implementation project(':capacitor-clipboard')
+    implementation project(':capacitor-native-biometric')
 
 }
 
