--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -13,6 +13,7 @@
     "@capacitor/cli": "^5.0.0",
     "@capacitor/clipboard": "^5.0.6",
     "@capacitor/core": "^5.3.0",
-    "@capacitor/ios": "^5.2.0"
+    "@capacitor/ios": "^5.2.0",
+    "capacitor-native-biometric": "^4.2.2"
   }
 }
