--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "assert": "^2.0.0",
     "capacitor-native-biometric": "^4.2.2",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "https": "^1.0.0",
     "moment": "^2.29.4",
