--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "vue"],
   "typescript.tsdk": "node_modules/typescript/lib",
   "i18n-ally.localesPaths": ["src/i18n"],
-  "i18n-ally.keystyle": "nested"  
+  "i18n-ally.keystyle": "nested",
+  "i18n-ally.enabledParsers": ["js"],
 }
 
