Updated App-identifier with HiveAuth Mobile (Instead of HiveAuth AuthSigner)

--- a/src-capacitor/android/app/build.gradle
+++ b/src-capacitor/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
 
 def keystoreProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('signing.properties')
@@ -8,10 +9,10 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-  namespace "com.hiveauth.authsigner"
+  namespace "com.hiveauth.mobile"
   compileSdkVersion rootProject.ext.compileSdkVersion
   defaultConfig {
-    applicationId "com.hiveauth.authsigner"
+    applicationId "com.hiveauth.mobile"
     minSdkVersion rootProject.ext.minSdkVersion
     targetSdkVersion rootProject.ext.targetSdkVersion
     versionCode 12
@@ -66,6 +67,8 @@ dependencies {
 
   implementation 'androidx.webkit:webkit:1.7.0'
   implementation 'com.google.code.gson:gson:2.10.1'
+
+  implementation platform('com.google.firebase:firebase-bom:32.4.0')
 
   implementation project(':capacitor-android')
   testImplementation "junit:junit:$junitVersion"
