Package update + warning/errors fix

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hive-auth-mobile",
   "version": "0.0.1",
-  "description": "HiveAuth App",
+  "description": "HiveAuth Mobile",
   "productName": "HiveAuth",
   "author": "Sagar <sagar.devices@gmail.com>",
   "private": true,
@@ -18,13 +18,13 @@
     "@capacitor/app-launcher": "^5.0.6",
     "@capacitor/clipboard": "^5.0.6",
     "@hiveio/dhive": "^1.2.7",
-    "@hiveio/hive-js": "^2.0.6",
+    "@hiveio/hive-js": "^2.0.7",
     "@quasar/cli": "^2.3.0",
     "@quasar/extras": "^1.16.4",
     "@weslink/vue-pincode": "^0.2.1",
     "assert": "^2.0.0",
     "capacitor-native-biometric": "^4.2.2",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "https": "^1.0.0",
