--- a/src-capacitor/capacitor.config.json
+++ b/src-capacitor/capacitor.config.json
@@ -6,6 +6,7 @@
   "webDir": "www",
   "server": {
     "androidScheme": "https",
+    "url": "http://192.168.1.143:9500"
   },
   "plugins": {
     "CapacitorHttp": {
