Plugin work in progress

--- a/src-capacitor/ios/App/App/Info.plist
+++ b/src-capacitor/ios/App/App/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Allow HiveAuth to Scan Barcodes</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Allow HiveAuth to perform FaceID/TouchID</string>
 </dict>
 </plist>
