--- a/src-capacitor/ios/App/App/Info.plist
+++ b/src-capacitor/ios/App/App/Info.plist
@@ -18,10 +18,27 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.hiveauth.authsigner</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>has</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow HiveAuth to Scan Barcodes</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Allow HiveAuth to perform FaceID/TouchID</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -45,9 +62,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
-	<key>NSCameraUsageDescription</key>
-	<string>Allow HiveAuth to Scan Barcodes</string>
-	<key>NSFaceIDUsageDescription</key>
-	<string>Allow HiveAuth to perform FaceID/TouchID</string>
 </dict>
 </plist>
