--- a/src-capacitor/capacitor.config.json
+++ b/src-capacitor/capacitor.config.json
@@ -5,7 +5,8 @@
   "npmClient": "npm",
   "webDir": "www",
   "server": {
-    "androidScheme": "https"
+    "androidScheme": "https",
+    "url": "http://192.168.129.57:9500"
   },
   "plugins": {
     "CapacitorHttp": {
