--- a/src-capacitor/capacitor.config.json
+++ b/src-capacitor/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.hiveauth.authsigner",
+  "appId": "com.hiveauth.mobile",
   "appName": "HiveAuth",
   "bundledWebRuntime": false,
   "npmClient": "npm",
