--- a/src-capacitor/ios/App/App/Info.plist
+++ b/src-capacitor/ios/App/App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>AuthSigner</string>
+	<string>HiveAuth</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -24,7 +24,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>com.hiveauth.authsigner</string>
+			<string>com.hiveauth.mobile</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>has</string>
