--- a/src-capacitor/capacitor.config.json
+++ b/src-capacitor/capacitor.config.json
@@ -5,8 +5,7 @@
   "npmClient": "npm",
   "webDir": "www",
   "server": {
-    "androidScheme": "https",
-    "url": "http://192.168.9.60:9500"
+    "androidScheme": "https"
   },
   "plugins": {
     "CapacitorHttp": {
